--- a/install
+++ b/install
@@ -20,7 +20,9 @@ then
   sudo mv config_latchSSH /usr/sbin/
   sudo chmod 4111 /usr/sbin/wp_sshd /usr/bin/latchSSH /usr/bin/pairSSH /usr/bin/unpairSSH
   sudo chmod 0100 /usr/sbin/config_latchSSH
-  cd ../easyGUI/
+  cd ../pam/libpam/
+  sudo make
+  cd ../../easyGUI/
   sudo python setup.py install
 else
   echo "installing error"
